eksnfargate/fargate/nodejs-fargate.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-apps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nodejs-apps
  name: deployment-nodejs
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-nodejs
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-nodejs
    spec:
      containers:
      - image: "ghcr.io/benc-uk/nodejs-demoapp:latest"
        imagePullPolicy: Always
        name: app-nodejs
        resources:
          limits:
            memory: "512Mi"
            cpu: "1024m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: nodejs-apps
  name: service-nodejs
spec:
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 80
      nodePort: 30001
  type: NodePort
  selector:
    app.kubernetes.io/name: app-nodejs
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nodejs-apps
  name: ingress-nodejs
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-nodejs
              port:
                number: 80
